--- a/src/ResponsiveFlow.Presentation/ResponsiveFlow.Presentation.csproj
+++ b/src/ResponsiveFlow.Presentation/ResponsiveFlow.Presentation.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" />
+  </ItemGroup>
+
 </Project>
