Add explicit Main() method to the App class

--- a/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
+++ b/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\ResponsiveFlow.Presentation\ResponsiveFlow.Presentation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ApplicationDefinition Remove="App.xaml" />
+    <Page Include="App.xaml" />
+  </ItemGroup>
+
   <PropertyGroup>
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <OutputType>WinExe</OutputType>
