--- a/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
+++ b/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
@@ -9,6 +9,11 @@
     <Page Include="App.xaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+    <PackageReference Include="Microsoft.Extensions.Logging" />
+  </ItemGroup>
+
   <PropertyGroup>
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
     <OutputType>WinExe</OutputType>
