--- a/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
+++ b/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Logging" />
     <PackageReference Include="Microsoft.Extensions.Logging.Configuration" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" />
   </ItemGroup>
 
   <PropertyGroup>
