Add serializing of the report to the file

--- a/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
+++ b/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
