Lock assembly versions to 0.1

--- a/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
+++ b/src/ResponsiveFlow.Application/ResponsiveFlow.Application.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <AssemblyVersion>0.1</AssemblyVersion>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <UserSecretsId>e9c5c602-cf85-40ac-be12-02324016c54c</UserSecretsId>
