--- a/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
+++ b/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <AssemblyVersion>0.1</AssemblyVersion>
     <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
