--- a/src/ResponsiveFlow.Presentation/ResponsiveFlow.Presentation.csproj
+++ b/src/ResponsiveFlow.Presentation/ResponsiveFlow.Presentation.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyVersion>$(VersionPrefix)</AssemblyVersion>
+    <AssemblyVersion>0.1</AssemblyVersion>
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
