--- a/src/ResponsiveFlow.Models/DataObjects/.editorconfig
+++ b/src/ResponsiveFlow.Models/DataObjects/.editorconfig
@@ -1,3 +1,6 @@
 [*.cs]
 dotnet_diagnostic.CA1819.severity = none # Properties should not return arrays
 resharper_unused_auto_property_accessor_global_highlighting = hint # UnusedAutoPropertyAccessor.Global
+
+[Metrics.cs]
+dotnet_diagnostic.CA1724.severity = none # Type names should not match namespaces
