--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,5 +16,6 @@
     <PackageVersion Include="Microsoft.Extensions.Logging.Configuration" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Options" Version="8.0.2" />
+    <PackageVersion Include="Perfolizer" Version="0.4.0" />
   </ItemGroup>
 </Project>
