Add checking command line arguments via injected IConfiguration object

--- a/src/ResponsiveFlow.Presentation/ResponsiveFlow.Presentation.csproj
+++ b/src/ResponsiveFlow.Presentation/ResponsiveFlow.Presentation.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Machinery" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
