--- a/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
+++ b/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="Perfolizer" />
