--- a/tests/Tests.Models/Tests.Models.csproj
+++ b/tests/Tests.Models/Tests.Models.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ResponsiveFlow.Models\ResponsiveFlow.Models.csproj" />
+  </ItemGroup>
+
 </Project>
