--- a/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
+++ b/src/ResponsiveFlow.Models/ResponsiveFlow.Models.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Http" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options" />
     <PackageReference Include="Perfolizer" />
