--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,7 +1,8 @@
 <Project>
   <Import Project="../Directory.Build.props" />
   <PropertyGroup>
-    <VersionPrefix>0.1.3</VersionPrefix>
+    <VersionPrefix>0.1.4</VersionPrefix>
+    <VersionSuffix>preview</VersionSuffix>
   </PropertyGroup>
   <PropertyGroup>
     <FileVersion>$(VersionPrefix)</FileVersion>
